# vecmap

./: Cargo.toml  Makefile
benches/: bench.rs
src/: entry.rs  lib.rs  serde_impl.rs
src/binary/: entry.rs  mod.rs
src/box/: mod.rs
src/vec/: entry.rs  mod.rs
tests/: binary.rs  vec.rs
