[package]
name = "vecmap"
description = "A Vec based map"
version = "0.1.0"
edition = "2021"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["vec", "map", "vector", "list", "key-value"]
categories = ["algorithms", "data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = []

[dependencies]
cfg-if = "1.0.0"
docfg = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]