[package]
name = "vector_mapp"
description = "A Vec based map"
version = "0.3.2"
edition = "2021"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["vec", "map", "vector", "list", "key-value"]
categories = ["algorithms", "data-structures", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cfg-if = "1.0.0"
docfg = "0.1.0"
serde = { version = "1.0.152", optional = true }

[dev-dependencies]
criterion = "0.4.0"
num-format = "0.4.4"
rand = "0.8.5"

[[bench]]
name = "bench"
harness = false

